--- a/scss/modules/_typography.scss
+++ b/scss/modules/_typography.scss
@@ -72,14 +72,34 @@
 	color: $primary-color;
 }
 
+.heading-primary-a{
+	@extend .heading-primary;
+	@include add-border(2px,$primary-color, bottom);
+}
+
 .heading-secondary{
 	color: $secondary-color;
+}
+
+.heading-secondary-a{
+	@extend .heading-secondary;
+	@include add-border(2px,$secondary-color, bottom);
 }
 
 .heading-light{
 	color: $light-color;
 }
 
+.heading-light-a{
+	@extend .heading-light;
+	@include add-border(2px,$light-color, bottom);
+}
+
 .heading-dark{
 	color: $dark-color;
+}
+
+.heading-dark-a{
+	@extend .heading-dark;
+	@include add-border(2px,$dark-color, bottom);
 }
