--- a/scss/modules/_sections.scss
+++ b/scss/modules/_sections.scss
@@ -19,17 +19,29 @@ section{
 }
 
 .section-primary{
-	@include add-background($primary-color)
+	@include add-background($primary-color);
+}
+
+.section-primary-a{
+	@extend .section-primary;
+	@include add-border(4px, $secondary-color, top)
+
+}
+
+.section-primary-b{
+	@extend .section-primary;
+	@include add-border(4px, $secondary-color, bottom)
+
 }
 
 .section-secondary{
-	@include add-background($secondary-color)
+	@include add-background($secondary-color);
 }
 
 .section-light{
-	@include add-background($light-color)
+	@include add-background($light-color);
 }
 
 .section-dark{
-	@include add-background($dark-color)
+	@include add-background($dark-color);
 }
